--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
         </li>
       </ul>
     </h4>
+    <button type="button" class="btn">Click me</button>
+
+    <button class="btn js-start">Start</button>
+    <button class="btn js-stop">Stop</button>
+    
+    <script src="/js/index.js"></script>
   </body>
 </html>
